modificación de vista Home e integración de Footer

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Dataverse Chat</title>
-    <!--Aquí puedes importar tu archivo de CSS para agregar estilos.-->
+
+    <link rel="icon" type="img/png" href="./imgs/petalo.png" />
+
+    <!-- fuente -->
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,400;0,700;1,400&family=Kumbh+Sans:wght@400;700&family=Lora&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
