modificar vistas CardsInfo y Apikey

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <title>Dataverse Chat</title>
     <!--Aquí puedes importar tu archivo de CSS para agregar estilos.-->
+    <link rel="stylesheet" href="styles.css">
   </head>
-  <body>
+  <body class="grid-container">
     <div id="root"></div>
     <script src="index.js" type="module"></script>
   </body>
