--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <!--Aquí puedes importar tu archivo de CSS para agregar estilos.-->
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body class="grid-container">
+  <body>
     <div id="root"></div>
     <script src="index.js" type="module"></script>
   </body>
