avance en vista error y chat grupal

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Dataverse Chat</title>
 
-    <link rel="icon" type="img/png" href="./imgs/petalo.png" />
+    <link rel="icon" type="img/png" href="./img/petalo.png" />
 
     <!-- fuente -->
 
